ATT: add admin management update APIs
